switch sponsor order

--- a/sitedata/sponsors.yml
+++ b/sitedata/sponsors.yml
@@ -134,7 +134,7 @@
 
 - name: Springer
   level: Exhibitor
-  logo: springer.png
+  logo: Springer.png
   logoontop: true
   website: https://www.springer.com
   description: |
