--- a/sitedata/awards.yml
+++ b/sitedata/awards.yml
@@ -121,10 +121,10 @@
       organization: Massachusetts Institute of Technology, USA
       description: For fundamental advances in AI for healthcare, being a proactive community builder and role model, and demonstrating significant impact in people's lives through cancer diagnosis, drug-resistant microbe antibiotics, and drug discovery.
       talk:
-        - session_name: tbd1
+        - session_name: TBD
           start_time: 2021-01-01 01:00:00+00:00
           end_time: 2021-01-01 02:00:00+00:00
-          link: \#
+          link: /
 
 - name: 2021 Feigenbaum Prize
   id: a4
@@ -159,10 +159,10 @@
       organization: Carnegie Mellon University, Optimized Markets, Inc., Strategy Robot, Inc., Strategic Machine, Inc., USA
       description: For outstanding research contributions in Artificial Intelligence, its application to electronic market places, the highly original use of AI in strategic multi-player games, and the application of AI to optimize organ exchanges
       talk:
-        - session_name: tbd1
+        - session_name: TBD
           start_time: 2021-01-01 01:00:00+00:00
           end_time: 2021-01-01 02:00:00+00:00
-          link: \#
+          link: /
 
 - name: 2021 AAAI/EAAI Outstanding Educator Award
   id: a7
@@ -178,7 +178,7 @@
         - session_name: On EAAI Symposium
           start_time: 2021-02-06 06:30:00-07:00
           end_time: 2021-02-06 07:45:00-07:00
-          link: /
+          link: 
 - name: 2021 AAAI Classic Paper Award
   id: a8
   description: something
@@ -190,9 +190,18 @@
       description: For proposing basic knowledge representation languages with low complexity of reasoning that have had significant impact beyond AI into semantic foundations for the Web
       talk:
         - session_name: Poster Presentation
-          start_time: 2021-02-04 00:00:00+00:00
-          end_time: 2021-02-04 23:00:00+00:00
+          start_time: 2021-02-04 08:45:00-08:00
+          end_time: 2021-02-04 10:30:00-08:00
           link: /
+        - session_name: Poster Presentation
+          start_time: 2021-02-04 16:45:00-08:00
+          end_time: 2021-02-04 18:30:00-08:00
+          link: /
+        - session_name: Poster Presentation
+          start_time: 2021-02-05 00:45:00-08:00
+          end_time: 2021-02-05 02:30:00-08:00
+          link: /
+        
 
 - name: 2019 AAAI/ACM SIGAI Dissertation Award
   id: a9
@@ -207,8 +216,16 @@
       paperlink: https://virtual.2021.aaai.org/paper_DISS-2019.html
       talk:
         - session_name: Poster Presentation
-          start_time: 2021-02-05 00:00:00+00:00
-          end_time: 2021-02-05 23:00:00+00:00
+          start_time: 2021-02-05 08:45:00-08:00
+          end_time: 2021-02-05 10:30:00-08:00
+          link: /
+        - session_name: Poster Presentation
+          start_time: 2021-02-05 16:45:00-08:00
+          end_time: 2021-02-05 18:30:00-08:00
+          link: /
+        - session_name: Poster Presentation
+          start_time: 2021-02-06 00:45:00-08:00
+          end_time: 2021-02-06 02:30:00-08:00
           link: /
     - name: Aishwarya Agrawal (Honorable Mention)
       id: ae1
