update dc schedule and description

--- a/sitedata/doctoral_consortium.yml
+++ b/sitedata/doctoral_consortium.yml
@@ -1,6 +1,6 @@
-- UID: Schedule
-  title: 'xxx'
-  organizers: Arjun Subramonian
+- UID: DoctoralConsortium
+  title:  Doctoral Consortium
+  organizers:
   info: |-
     to be continued
   rocketchat_channel: Events_DoctoralConsortium
