--- a/sitedata/awards.yml
+++ b/sitedata/awards.yml
@@ -121,10 +121,10 @@
       organization: Massachusetts Institute of Technology, USA
       description: For fundamental advances in AI for healthcare, being a proactive community builder and role model, and demonstrating significant impact in people's lives through cancer diagnosis, drug-resistant microbe antibiotics, and drug discovery.
       talk:
-        - session_name: TBD
-          start_time: 2021-01-01 01:00:00+00:00
-          end_time: 2021-01-01 02:00:00+00:00
-          link: /
+        - session_name: Invited Talk on
+          start_time: 2021-02-04 15:30:00-08:00
+          end_time: 2021-02-04 16:45:00-08:00
+          link: https://virtual.2021.aaai.org/plenary_session_speaker_by_regina_barzilay.html
 
 - name: 2021 Feigenbaum Prize
   id: a4
@@ -175,10 +175,10 @@
       organization: University of Oxford and Alan Turing Institute, London
       description: For outstanding global leadership in AI education and public awareness, including publishing broadly adopted books and textbooks, establishing the European Agent Systems Summer School, and inspiring public dialogue on AI and multi-agent systems.
       talk:
-        - session_name: On EAAI Symposium
-          start_time: 2021-02-06 06:30:00-07:00
-          end_time: 2021-02-06 07:45:00-07:00
-          link: 
+        - session_name: Invited Talk on
+          start_time: 2021-02-06 06:30:00-08:00
+          end_time: 2021-02-06 07:45:00-08:00
+          link: https://virtual.2021.aaai.org/plenary_session_speaker_by_michael_wooldridge.html
 - name: 2021 AAAI Classic Paper Award
   id: a8
   description: something
@@ -188,19 +188,6 @@
       link: https://virtual.2021.aaai.org/paper_CLASSIC-2021.html
       organization: Diego Calvanese, Giuseppe De Giacomo, Domenico Lembo, Maurizio Lenzerini, and Riccardo Rosati
       description: For proposing basic knowledge representation languages with low complexity of reasoning that have had significant impact beyond AI into semantic foundations for the Web
-      talk:
-        - session_name: Poster Presentation
-          start_time: 2021-02-04 08:45:00-08:00
-          end_time: 2021-02-04 10:30:00-08:00
-          link: /
-        - session_name: Poster Presentation
-          start_time: 2021-02-04 16:45:00-08:00
-          end_time: 2021-02-04 18:30:00-08:00
-          link: /
-        - session_name: Poster Presentation
-          start_time: 2021-02-05 00:45:00-08:00
-          end_time: 2021-02-05 02:30:00-08:00
-          link: /
         
 
 - name: 2019 AAAI/ACM SIGAI Dissertation Award
@@ -214,19 +201,6 @@
       organization: Massachusetts Institute of Technology, USA
       description: For his work entitled Learning to See the Physical World
       paperlink: https://virtual.2021.aaai.org/paper_DISS-2019.html
-      talk:
-        - session_name: Poster Presentation
-          start_time: 2021-02-05 08:45:00-08:00
-          end_time: 2021-02-05 10:30:00-08:00
-          link: /
-        - session_name: Poster Presentation
-          start_time: 2021-02-05 16:45:00-08:00
-          end_time: 2021-02-05 18:30:00-08:00
-          link: /
-        - session_name: Poster Presentation
-          start_time: 2021-02-06 00:45:00-08:00
-          end_time: 2021-02-06 02:30:00-08:00
-          link: /
     - name: Aishwarya Agrawal (Honorable Mention)
       id: ae1
       link: https://www.cc.gatech.edu/grads/a/aagrawal307/
