update link position in awardee talks

--- a/sitedata/socials.yml
+++ b/sitedata/socials.yml
@@ -141,7 +141,7 @@
   image: static/images/aaai2021/AAAI-logo.png
   website: https://researcher.watson.ibm.com/researcher/view_group.php?id=10599
   rocketchat_channel:
-  location: takes place Online
+  location: takes place online
   zoom_link: https://zoom.us/j/98166353906?pwd=YVRpSUI5RGtHcCtmWHBOb0lkZXFvQT09
   sessions:
   - name: ""
