--- a/sitedata/awards.yml
+++ b/sitedata/awards.yml
@@ -121,7 +121,7 @@
       organization: Massachusetts Institute of Technology, USA
       description: For fundamental advances in AI for healthcare, being a proactive community builder and role model, and demonstrating significant impact in people's lives through cancer diagnosis, drug-resistant microbe antibiotics, and drug discovery.
       talk:
-        - session_name: Invited Talk on
+        - session_name: Invited Talk
           start_time: 2021-02-04 15:30:00-08:00
           end_time: 2021-02-04 16:45:00-08:00
           link: https://virtual.2021.aaai.org/plenary_session_speaker_by_regina_barzilay.html
@@ -159,10 +159,10 @@
       organization: Carnegie Mellon University, Optimized Markets, Inc., Strategy Robot, Inc., Strategic Machine, Inc., USA
       description: For outstanding research contributions in Artificial Intelligence, its application to electronic market places, the highly original use of AI in strategic multi-player games, and the application of AI to optimize organ exchanges
       talk:
-        - session_name: TBD
+        - session_name: Invited Talk
           start_time: 2021-01-01 01:00:00+00:00
           end_time: 2021-01-01 02:00:00+00:00
-          link: /
+          link: https://virtual.2021.aaai.org/plenary_session_opening_remarks_and_speaker_by_tuomas_sandholm.html
 
 - name: 2021 AAAI/EAAI Outstanding Educator Award
   id: a7
@@ -175,7 +175,7 @@
       organization: University of Oxford and Alan Turing Institute, London
       description: For outstanding global leadership in AI education and public awareness, including publishing broadly adopted books and textbooks, establishing the European Agent Systems Summer School, and inspiring public dialogue on AI and multi-agent systems.
       talk:
-        - session_name: Invited Talk on
+        - session_name: Invited Talk
           start_time: 2021-02-06 06:30:00-08:00
           end_time: 2021-02-06 07:45:00-08:00
           link: https://virtual.2021.aaai.org/plenary_session_speaker_by_michael_wooldridge.html
